--- a/package.json
+++ b/package.json
@@ -6,23 +6,33 @@
     "scripts": {
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "bash setup-test.sh && bash test_comprehensive.sh",
+        "setup": "bash setup-test.sh"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^8.0.3",
+        "nodemailer": "^7.0.11",
         "ua-parser-js": "^1.0.37"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^3.0.0",
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.10.4",
+        "@types/nodemailer": "^7.0.4",
         "@types/ua-parser-js": "^0.7.39",
         "nodemon": "^3.0.2",
         "ts-node": "^10.9.2",
